
   o escalc() does a bit more housekeeping

   o added currently undocumented arguments 'onlyo1', 'addyi', and 'addvi'
     to escalc() that allow for more flexibility when computing certain bias
     corrections and when computing sampling variances for measures that
     make use of the 'add' and 'to' arguments

   o labbe() gains 'lty' argument

   o fixed an issue with robust.rma.mv() when the model was fitted with
     sparse=TRUE (thanks to Roger Martineau for noting the problem)

   o various method functions (fitted(), resid(), predict(), etc.) behave
     more consistently when model omitted studies with missings

   o predict.rma() gains 'vcov' argument; when set to TRUE, the variance-
     covariance matrix of the predicted values is also returned

   o vcov.rma() can now also return the variance-covariance matrix of the
     fitted values (type="fitted") and the residuals (type="resid")

   o added `$<-` and as.matrix() methods for 'list.rma' objects

   o fixed error in simulate.rma() that would generate too many samples for
     'rma.mv' models

   o added undocumented argument 'time' to model fitting functions; if set
     to TRUE, the model fitting time is printed

   o added more tests (also for parallel operations)

   o reorganized the documentation a bit


Changes in Version 2.0-0 (2017-06-22)
=====================================

   o added simulate() method for 'rma' objects; added MASS to 'Suggests'
     (since simulating for 'rma.mv' objects requires mvrnorm() from MASS)

   o cooks.distance.rma.mv() now works properly even when there are missing
     values in the data

   o residuals() gains 'type' argument and can compute Pearson residuals

   o the 'newmods' argument in predict() can now be a named vector or a
     matrix/data frame with column names that get properly matched up with
     the variables in the model

   o added ranef.rma.mv() for extracting the BLUPs of the random effects for
     'rma.mv' models
