@@ -81,6 +81,7 @@ S3method(head, list.rma)
 S3method(tail, list.rma)
 S3method(print, hc.rma.uni)
 S3method(print, permutest.rma.uni)
+S3method(print, profile.rma)
 S3method(print, ranktest.rma)
 S3method(print, regtest.rma)
 S3method(print, rma.glmm)
