@@ -1,4 +1,4 @@
-plot.profile.rma <- function(x, ylim, pch=19, ylab, ...) {
+plot.profile.rma <- function(x, ylim, pch=19, ylab, ciline=FALSE, ...) {
 
    #########################################################################
 
@@ -24,6 +24,8 @@ plot.profile.rma <- function(x, ylim, pch=19, ylab, ...) {
       missing.ylab <- FALSE
    }
 
+   #########################################################################
+
    if (x$comps == 1) {
 
       if (missing.ylim)
@@ -35,7 +37,9 @@ plot.profile.rma <- function(x, ylim, pch=19, ylab, ...) {
       plot(x[[1]], x[[2]], type="o", xlab=x$xlab, ylab=ylab, main=x$title, bty="l", pch=pch, ylim=ylim, ...)
       abline(v=x$vc, lty="dotted")
       abline(h=x$maxll, lty="dotted")
-      #abline(h=x$maxll - qchisq(.95, df=1)/2, lty="dotted")
+
+      if (ciline)
+         abline(h=x$maxll - qchisq(0.95, df=1)/2, lty="dotted")
 
    } else {
 
@@ -47,7 +51,7 @@ plot.profile.rma <- function(x, ylim, pch=19, ylab, ...) {
       if (missing.ylab)
          ylab <- paste(ifelse(x[[j]]$method=="REML", "Restricted ", ""), "Log-Likelihood", sep="")
 
-         plot(x[[j]], ylim=ylim, pch=pch, ylab=ylab, ...)
+         plot(x[[j]], ylim=ylim, pch=pch, ylab=ylab, ciline=ciline, ...)
 
       }
 
